--- a/styles/main.css
+++ b/styles/main.css
@@ -1,9 +1,13 @@
 .cent_text{
 	text-align: center; 
 }
-body{
+.big_top{
 	background-color: #efefef !important;
-	padding-top: 70px;  
+	padding-top: 100px; 	
+}
+.small_top{
+	background-color: #efefef !important;
+	padding-top: 90px; 
 }
 
 p{
@@ -185,6 +189,10 @@ h5{
 	margin-right: 10%;
 	height: 800px;
 }
+.bot_box{
+	height: 40px;
+	width: 500px;
+}
 .top_test{
 	height: 300px;
 	margin-bottom: 50px; 
@@ -192,12 +200,17 @@ h5{
 .second_test{
 	height: 300px;
 }
+.has_height{
+	height: 80px;
+}
 .footer{
 	display: block; 
+	margin-top: 20px !important;
 	position: fixed; 
 	bottom: 0 !important;
 	width: 100%;
 	height: 40px;
 	background-color: #2e2e2e; 
 	color: white;
+	z-index: +2 !important; 
 }
